samples/_failures_safe/1761206709_083770_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06642043.c: In function ‘tokenize’:
./samples/SAFE/__tmp_06642043.c:152:13: error: expected expression at end of input
  152 |             if (copy_len >= MAX_TOKEN_LEN) copy_len =
      |             ^~
./samples/SAFE/__tmp_06642043.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06642043.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06642043.c:152:13: error: expected declaration or statement at end of input
